formato para texto de fragment infertilidad

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3385FF</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorVerde">#72D55D</color>
-    <color name="colorAzulClaro">#33adff</color>
+    <color name="colorAzulClaro">#33ADFF</color>
 
 
 </resources>
