--- a/app/src/main/res/layout/fragment_infertilidad.xml
+++ b/app/src/main/res/layout/fragment_infertilidad.xml
@@ -9,12 +9,11 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="477dp"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/esperm" />
 
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <ScrollView
         android:layout_width="400dp"
@@ -28,9 +27,15 @@
 
 
             <TextView
-                android:id="@+id/txtTitulo0"
+                android:id="@+id/textView14"
                 android:layout_width="match_parent"
-                android:layout_height="47dp"
+                android:layout_height="63dp"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/txtTitulo0"
+                android:layout_width="418dp"
+                android:layout_height="42dp"
                 android:text="@string/infertilidad_titulo0"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -38,7 +43,7 @@
             <TextView
                 android:id="@+id/txtTitulo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="@string/infertilidad_titulo1"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -99,7 +104,7 @@
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
-                android:layout_height="450dp"
+                android:layout_height="405dp"
                 app:srcCompat="@drawable/tabla1"
                 tools:ignore="VectorDrawableCompat" />
 
@@ -110,8 +115,9 @@
 
             <ImageView
                 android:id="@+id/imageView11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="431dp"
+                android:layout_height="259dp"
+                android:layout_gravity="center"
                 app:srcCompat="@drawable/factoresinferti" />
 
             <TextView
