--- a/app/src/main/res/layout/fragment_seminograma.xml
+++ b/app/src/main/res/layout/fragment_seminograma.xml
@@ -20,7 +20,10 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,26 +33,32 @@
             <TextView
                 android:id="@+id/txtSeminograma_titulo0"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/seminograma_titulo0" />
+                android:layout_height="50dp"
+                android:text="@string/seminograma_titulo0"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txtSeminograma_titulo1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/seminograma_titulo1" />
+                android:text="@string/seminograma_titulo1"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txtSeminograma_definicion1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="136dp"
                 android:text="@string/seminograma_definicion1" />
 
             <TextView
                 android:id="@+id/txtseminograma_tabla"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/infertilidad_titulo2" />
+                android:text="@string/infertilidad_titulo2"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txtseminograma_parrafo1"
@@ -60,7 +69,7 @@
             <ImageView
                 android:id="@+id/imageView7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="255dp"
                 app:srcCompat="@drawable/tabla2" />
 
             <TextView
@@ -150,19 +159,19 @@
             <TextView
                 android:id="@+id/txtseminograma_def14"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:text="@string/seminograma_def14" />
 
             <TextView
                 android:id="@+id/txtseminograma_parrafo3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="287dp"
                 android:text="@string/seminograma_parrafo3" />
 
             <ImageView
                 android:id="@+id/imgfigura1esperm"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="281dp"
                 app:srcCompat="@drawable/figura1" />
 
             <TextView
