--- a/app/src/main/res/layout/myadapter.xml
+++ b/app/src/main/res/layout/myadapter.xml
@@ -34,10 +34,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginLeft="104dp"
+        android:layout_marginLeft="124dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/colorAzulCrema"
         android:text="Ver resultado"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
