--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#94c4f3</color>
+    <color name="colorPrimary">#94C4F3</color>
     <color name="colorPrimaryDark">#94c4f3</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorVerde">#72D55D</color>
@@ -8,4 +8,6 @@
     <color name="colorCrema">#FBFBEC</color>
     <color name="colorCremaOscuro">#f3c393</color>
     <color name="colorAzulCrema">#AFD5EE</color>
+    <color name="colorTitulos">#67A1CE</color>
+    <color name="colorSubTitulos">#6593DA</color>
 </resources>
