--- a/app/src/main/res/layout/fragment_infertilidad.xml
+++ b/app/src/main/res/layout/fragment_infertilidad.xml
@@ -37,7 +37,8 @@
                 android:layout_width="418dp"
                 android:layout_height="42dp"
                 android:text="@string/infertilidad_titulo0"
-                android:textSize="24sp"
+                android:textColor="@color/colorTitulos"
+                android:textSize="30sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -45,6 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/infertilidad_titulo1"
+                android:textColor="@color/colorTitulos"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -59,6 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/infertilidad_definicion1"
+                android:textColor="@color/colorSubTitulos"
                 android:textStyle="bold" />
 
             <TextView
@@ -72,6 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/infertilidad_definicion2"
+                android:textColor="@color/colorSubTitulos"
                 android:textStyle="bold" />
 
             <TextView
@@ -85,6 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/infertilidad_titulo2"
+                android:textColor="@color/colorTitulos"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
