--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -39,8 +39,8 @@
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
+                android:icon="@drawable/ic_iconinfo"
+                android:title="@string/menu_info" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
