--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorVerde">#72D55D</color>
     <color name="colorAzulClaro">#86B8F0</color>
     <color name="colorCrema">#FBFBEC</color>
-    <color name="colorCremaOscuro">#F3C393</color>
+    <color name="colorAzulOscuroBoton">#40679E</color>
     <color name="colorAzulCrema">#AFD5EE</color>
     <color name="colorTitulos">#67A1CE</color>
     <color name="colorSubTitulos">#6593DA</color>
