--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="44dp"
         android:backgroundTint="@android:color/darker_gray"
         android:ems="10"
         android:hint="@string/usuario"
@@ -25,7 +25,7 @@
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@android:color/darker_gray"
         android:ems="10"
         android:hint="@string/contrasena"
@@ -39,13 +39,14 @@
         style="@android:style/Widget.DeviceDefault.Button.Small"
         android:layout_width="156dp"
         android:layout_height="44dp"
-        android:layout_marginTop="32dp"
-        android:background="@color/colorCrema"
+        android:layout_marginTop="28dp"
+        android:background="@color/colorAzulOscuroBoton"
         android:onClick="acceder"
         android:text="@string/login"
 
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.435"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
@@ -76,6 +77,8 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
         android:text="@string/registrese"
         app:layout_constraintEnd_toEndOf="parent"
