--- a/app/src/main/res/layout/fragment_otros.xml
+++ b/app/src/main/res/layout/fragment_otros.xml
@@ -16,4 +16,58 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/otros_1"
+                android:layout_width="match_parent"
+                android:layout_height="51dp"
+                android:text="@string/otros_1" />
+
+            <TextView
+                android:id="@+id/otros_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/otros_2"
+                android:textColor="@color/colorTitulos"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/otros_3"
+                android:layout_width="match_parent"
+                android:layout_height="219dp"
+                android:text="@string/otros_3" />
+
+            <TextView
+                android:id="@+id/otros_4"
+                android:layout_width="match_parent"
+                android:layout_height="238dp"
+                android:text="@string/otros_4" />
+
+            <TextView
+                android:id="@+id/otros_5"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:text="@string/otros_5" />
+
+            <ImageView
+                android:id="@+id/imageView16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/imagenotros" />
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
